--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ body{
     background-color: rgb(184, 180, 180);
     padding-left: 20px;
     margin-bottom: 20px;
+    flex:1;
 }
 input{
-    flex:1;
     background: transparent;
     border: none;
     outline: none;
@@ -65,12 +65,15 @@ button:active{
 }
 ul{
     display: grid;
-    grid-template-columns: 0.5fr 5fr;
+    grid-template-columns: 0.5fr 6fr;
     align-items: center;
+    position: relative;
+    right: 35px;
+    width: 100%;
 }
 li{
     display: grid;
-    grid-template-columns: 4fr 1fr 1fr;
+    grid-template-columns: 10fr 1fr 1fr;
     list-style: none;
     align-items: center;
 }
@@ -100,7 +103,8 @@ ul input[type=checkbox]:checked + li .editbtn{
         width: 90%;
     }
     #add{
-       
+        position: relative;
+        right: 40px;
         font-size: 14px;
         padding: 7px 15px;
     }
